ingress-st2-v3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: st2-ingress
  namespace: st2
spec:
  defaultBackend:
    service:
      name: stackstorm-ha-1647617833-st2web
      port:
        number: 80
  tls:
    - hosts:
      - demo.azure.com
      secretName: aks-ingress-tls
  rules:
  - host: demo.azure.com
    http:
      paths:
      - backend:
          service:
            name: stackstorm-ha-1647617833-st2web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
