ingress-st2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: st2-ingress
  namespace: st2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    # Attempt to redirect HTTP to HTTPS.
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Necessary rewrite rule.
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
      - demo.azure.com
      secretName: aks-ingress-tls
  rules:
    - host: demo.azure.com
      http:
        paths:
        - path: /
          backend:
            serviceName: stackstorm-ha-1647617833-st2web
            servicePort: 80
